@@ -4,6 +4,7 @@ HEAD, planned as v0.17
 - Added 64 bit support for ADD and SUB components.
 - Bug fixes
   - Splitter now allows 64-bit inputs and outputs.
+  - BarrelShifter works with 64 bit.
 
 v0.16, released on 02. Jan 2018
 - RAM components and EEPROM now allow an input invert configuration.
